Mobile: Fix background image on iOS

--- a/src/styles/layout/_base.sass
+++ b/src/styles/layout/_base.sass
@@ -44,7 +44,7 @@ html
   background-position: center center
   background-repeat: no-repeat
   background-size: cover
-  background-attachment: fixed
+  // background-attachment: fixed // not needed since the element is fixed, right? (and it breaks on iOS safari)
 
   // Default background on page load
   background-image: url('https://s3.amazonaws.com/static.headsoak.com/img/bg/Hokusai_1760-1849_Ocean_waves-800x.jpg')
